# wx-analyzer-cli

./: .env.example  .gitignore  LICENSE  README.ai.md  README.md  main.py  pyproject.toml
core/: __init__.py  ai_engine.py  config.py  processor.py  scraper.py  security.py  storage.py
docs/: windows-gbk-encoding.md
tests/: test_ai_engine.py  test_config.py  test_main.py  test_processor.py  test_security.py  test_storage.py
